--- a/en-us/blog-building-a-3d-printed-prototype/index.html
+++ b/en-us/blog-building-a-3d-printed-prototype/index.html
@@ -18,7 +18,7 @@
   <meta content="Blog - Lets plan the prototype hardware" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link
-    href="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/css/sentrybox.webflow.shared.069cc7328.min.css"
+    href="/img/css/sentrybox.webflow.shared.069cc7328.min.css"
     rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
@@ -30,9 +30,9 @@
     type="text/javascript">WebFont.load({ google: { families: ["Inconsolata:400,700", "Manrope:200,300,regular,500,600,700,800", "Source Code Pro:regular,600,900"] } });</script>
   <script
     type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-  <link href="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/65c2093da5ccc99dc827362c_favicon-32x32.png"
+  <link href="/img/65c2093da5ccc99dc827362c_favicon-32x32.png"
     rel="shortcut icon" type="image/x-icon">
-  <link href="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/65c209579adc9e9a64f1b5e5_favicon_256.png"
+  <link href="/img/65c209579adc9e9a64f1b5e5_favicon_256.png"
     rel="apple-touch-icon">
   <script src="https://www.googletagmanager.com/gtag/js?id=G-WDW9GQDYPG" async=""></script>
 </head>
@@ -47,7 +47,7 @@
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease"
     role="banner" class="navbar w-nav">
     <div class="container-44 w-container"><a href="/#section-teaser" class="brand-2 w-nav-brand"><img width="150"
-          src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/668ab389d29272fd55e93705_logo_black.svg"
+          src="/img/668ab389d29272fd55e93705_logo_black.svg"
           alt="SentryBox Logo"></a>
       <nav role="navigation" class="nav-menu-3 w-nav-menu"><a data-scroll-time="20" href="/#section-platform"
           class="nav-link-2 w-nav-link" style="max-width: 1220px;">Platform</a><a href="/#section-hardware"
@@ -69,7 +69,7 @@
   <section class="blog-section">
     <div class="w-layout-blockcontainer blog-wrapper w-container"><a href="/en-us/blog"
         class="back-to-blog-link w-inline-block"><img
-          src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66bb05325a3428e6258c0775_Icon_back.webp"
+          src="/img/66bb05325a3428e6258c0775_Icon_back.webp"
           loading="lazy" alt="" class="image-54">
         <div class="text-block-12">back to all blog entries</div>
       </a>
@@ -80,17 +80,17 @@
         <div data-w-id="7e29a208-2a73-b24b-7072-ad460a66ac35"
           style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;"
           class="w-layout-blockcontainer blog-sub-info w-container"><img
-            src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/65fc0ea852fd7a3bbd8dc308_Avatar_Small_1_500px_ZoomedOut.jpg"
+            src="/img/65fc0ea852fd7a3bbd8dc308_Avatar_Small_1_500px_ZoomedOut.jpg"
             loading="lazy" alt="Benjamin Krüger" class="blog-author-image">
           <div class="blog-author-name">Benjamin&nbsp;Krüger</div>
           <div class="blog-date">April 15, 2024</div>
         </div><img class="blog-image"
-          src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/67b5e7584b351c5d7c7e53f3_blog_hardware_print.webp"
+          src="/img/67b5e7584b351c5d7c7e53f3_blog_hardware_print.webp"
           alt=""
           style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;"
           sizes="(max-width: 479px) 96vw, (max-width: 991px) 97vw, 760px"
           data-w-id="7e29a208-2a73-b24b-7072-ad460a66ac3b" loading="lazy"
-          srcset="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/67b5e7584b351c5d7c7e53f3_blog_hardware_print-p-500.webp 500w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/67b5e7584b351c5d7c7e53f3_blog_hardware_print-p-800.webp 800w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/67b5e7584b351c5d7c7e53f3_blog_hardware_print-p-1080.webp 1080w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/67b5e7584b351c5d7c7e53f3_blog_hardware_print.webp 1500w">
+          srcset="/img/67b5e7584b351c5d7c7e53f3_blog_hardware_print-p-500.webp 500w, /img/67b5e7584b351c5d7c7e53f3_blog_hardware_print-p-800.webp 800w, /img/67b5e7584b351c5d7c7e53f3_blog_hardware_print-p-1080.webp 1080w, /img/67b5e7584b351c5d7c7e53f3_blog_hardware_print.webp 1500w">
         <p data-w-id="7e29a208-2a73-b24b-7072-ad460a66ac3c"
           style="transform: translate3d(0px, 40px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 0; transform-style: preserve-3d;"
           class="blog-list-text">Our goal is to create a plug-and-play device that detects hackers within a network,
@@ -110,12 +110,12 @@
           security.<br><br>There are several display options available that can connect to various Linux boards, which
           would fit well with this concept. However, we need to thoroughly test their reliability to ensure they meet
           the standards required for continuous operation.<br></p><img class="blog-image"
-          src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/67b5e6f51e18aa43410973be_blog_hardware.webp"
+          src="/img/67b5e6f51e18aa43410973be_blog_hardware.webp"
           alt=""
           style="transform: translate3d(0px, 0.394px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
           sizes="(max-width: 479px) 96vw, (max-width: 991px) 97vw, 760px"
           data-w-id="f0ac77cc-bb1c-8296-1c44-68deb98153fd" loading="lazy"
-          srcset="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/67b5e6f51e18aa43410973be_blog_hardware-p-500.webp 500w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/67b5e6f51e18aa43410973be_blog_hardware.webp 768w">
+          srcset="/img/67b5e6f51e18aa43410973be_blog_hardware-p-500.webp 500w, /img/67b5e6f51e18aa43410973be_blog_hardware.webp 768w">
         <h1 class="blog-sub-headline">Modeling &amp; Software</h1>
         <p data-w-id="7200e989-5d56-5448-c68a-d51288b780a1"
           style="transform: translate3d(0px, 0.394px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
@@ -128,12 +128,12 @@
           files, which are widely supported by most 3D printing slicers.<br><br>When designing the case, we needed the
           ports to fit perfectly, which we achieved through simple measurements and a few iterations. There was no need
           for active cooling, and the SentryBox has enough room for proper airflow.<br></p><img class="blog-image"
-          src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/67b5e99a91f431f31925eaec_blog_3d_print.webp"
+          src="/img/67b5e99a91f431f31925eaec_blog_3d_print.webp"
           alt=""
           style="transform: translate3d(0px, 0.6756px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
           sizes="(max-width: 479px) 96vw, (max-width: 991px) 97vw, 760px"
           data-w-id="1ecf324f-9768-705c-4d3a-3395bec8f234" loading="lazy"
-          srcset="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/67b5e99a91f431f31925eaec_blog_3d_print-p-500.webp 500w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/67b5e99a91f431f31925eaec_blog_3d_print-p-800.webp 800w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/67b5e99a91f431f31925eaec_blog_3d_print-p-1080.webp 1080w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/67b5e99a91f431f31925eaec_blog_3d_print.webp 1500w">
+          srcset="/img/67b5e99a91f431f31925eaec_blog_3d_print-p-500.webp 500w, /img/67b5e99a91f431f31925eaec_blog_3d_print-p-800.webp 800w, /img/67b5e99a91f431f31925eaec_blog_3d_print-p-1080.webp 1080w, /img/67b5e99a91f431f31925eaec_blog_3d_print.webp 1500w">
         <h1 class="blog-sub-headline"><strong>Going to Production</strong></h1>
         <p data-w-id="c1737d57-36aa-fe98-c856-5a91c68dbc0b"
           style="transform: translate3d(0px, 0.6756px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
@@ -144,12 +144,12 @@
           as is.<br><br>Fortunately, I had previously built a website for a local plastics manufacturer, which
           specializes in both small- and large-scale production. We provided them with our 3D printing file, and they
           produced a perfect, certified SentryBox case.<br></p><img class="blog-image"
-          src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/67b70e05d183d39b8ca008ae_Final%20Product.webp"
+          src="/img/67b70e05d183d39b8ca008ae_Final%20Product.webp"
           alt=""
           style="transform: translate3d(0px, 0.6756px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
           sizes="(max-width: 479px) 96vw, (max-width: 991px) 97vw, 760px"
           data-w-id="f64014a5-8dd9-545d-6d3c-d41e5f7cdc0a" loading="lazy"
-          srcset="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/67b70e05d183d39b8ca008ae_Final%20Product-p-500.webp 500w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/67b70e05d183d39b8ca008ae_Final%20Product-p-800.webp 800w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/67b70e05d183d39b8ca008ae_Final%20Product-p-1080.webp 1080w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/67b70e05d183d39b8ca008ae_Final%20Product-p-1600.webp 1600w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/67b70e05d183d39b8ca008ae_Final%20Product.webp 2000w">
+          srcset="/img/67b70e05d183d39b8ca008ae_Final%20Product-p-500.webp 500w, /img/67b70e05d183d39b8ca008ae_Final%20Product-p-800.webp 800w, /img/67b70e05d183d39b8ca008ae_Final%20Product-p-1080.webp 1080w, /img/67b70e05d183d39b8ca008ae_Final%20Product-p-1600.webp 1600w, /img/67b70e05d183d39b8ca008ae_Final%20Product.webp 2000w">
         <h1 class="blog-sub-headline"><strong>Final Steps</strong></h1>
         <p data-w-id="abb9285a-c37a-4717-a1a6-17528c9171b9"
           style="transform: translate3d(0px, 1.25px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
@@ -292,12 +292,12 @@
     <div class="w-layout-blockcontainer container-59 w-container">
       <div data-w-id="40109c1b-261d-9461-5e73-60c8b7f8d1b8" class="w-layout-blockcontainer container-60 w-container"
         style="transform: translate3d(0px, 3.1496px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; opacity: 1; will-change: transform;">
-        <img src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66b33cbd7e15763fea127462_logo_white.webp"
+        <img src="/img/66b33cbd7e15763fea127462_logo_white.webp"
           width="136" alt="SentryBox Logo" class="image-34">
         <div class="w-layout-blockcontainer w-container">
           <div class="w-layout-blockcontainer container-89 w-container">
             <p class="paragraph-29-copy">Made with </p><img
-              src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66b32db00cc36537de8660c9_Heart.webp"
+              src="/img/66b32db00cc36537de8660c9_Heart.webp"
               loading="lazy" alt="Love" class="image-39">
             <p class="paragraph-29-copy">in&nbsp;Germany </p>
           </div>
@@ -325,14 +325,14 @@
     </div>
     <div class="animatedfadein"></div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=655e51c4f097f75004c023e1"
+  <script src="/js/jquery-3.5.1.min.dc5e7f18c8.js?site=655e51c4f097f75004c023e1"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
-  <script src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/js/webflow.schunk.36b8fb49256177c8.js"
+  <script src="/js/webflow.schunk.36b8fb49256177c8.js"
     type="text/javascript"></script>
-  <script src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/js/webflow.9d7b5763.7c9fec383a4d5d2d.js"
+  <script src="/js/webflow.9d7b5763.7c9fec383a4d5d2d.js"
     type="text/javascript"></script>
-  <script src="https://hubspotonwebflow.com/assets/js/form-124.js" type="text/javascript"
+  <script src="/js/form-124.js" type="text/javascript"
     integrity="sha384-bjyNIOqAKScdeQ3THsDZLGagNN56B4X2Auu9YZIGu+tA/PlggMk4jbWruG/P6zYj"
     crossorigin="anonymous"></script>
 </body>
