--- a/en-us/blog-how-do-honeypots-help-secure-your-network/index.html
+++ b/en-us/blog-how-do-honeypots-help-secure-your-network/index.html
@@ -31,7 +31,7 @@
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link
-    href="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/css/sentrybox.webflow.shared.069cc7328.min.css"
+    href="/img/css/sentrybox.webflow.shared.069cc7328.min.css"
     rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
@@ -43,9 +43,9 @@
     type="text/javascript">WebFont.load({ google: { families: ["Inconsolata:400,700", "Manrope:200,300,regular,500,600,700,800", "Source Code Pro:regular,600,900"] } });</script>
   <script
     type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-  <link href="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/65c2093da5ccc99dc827362c_favicon-32x32.png"
+  <link href="/img/65c2093da5ccc99dc827362c_favicon-32x32.png"
     rel="shortcut icon" type="image/x-icon">
-  <link href="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/65c209579adc9e9a64f1b5e5_favicon_256.png"
+  <link href="/img/65c209579adc9e9a64f1b5e5_favicon_256.png"
     rel="apple-touch-icon">
   <script src="https://www.googletagmanager.com/gtag/js?id=G-WDW9GQDYPG" async=""></script>
 </head>
@@ -60,7 +60,7 @@
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease"
     role="banner" class="navbar w-nav">
     <div class="container-44 w-container"><a href="/#section-teaser" class="brand-2 w-nav-brand"><img width="150"
-          src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/668ab389d29272fd55e93705_logo_black.svg"
+          src="/img/668ab389d29272fd55e93705_logo_black.svg"
           alt="SentryBox Logo"></a>
       <nav role="navigation" class="nav-menu-3 w-nav-menu"><a data-scroll-time="20" href="/#section-platform"
           class="nav-link-2 w-nav-link" style="max-width: 1220px;">Platform</a><a href="/#section-hardware"
@@ -82,7 +82,7 @@
   <section class="blog-section">
     <div class="w-layout-blockcontainer blog-wrapper w-container"><a href="/en-us/blog"
         class="back-to-blog-link w-inline-block"><img
-          src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66bb05325a3428e6258c0775_Icon_back.webp"
+          src="/img/66bb05325a3428e6258c0775_Icon_back.webp"
           loading="lazy" alt="" class="image-54">
         <div class="text-block-12">back to all blog entries</div>
       </a>
@@ -93,16 +93,16 @@
         <div data-w-id="ca53b414-6769-96d4-3ee9-63cba5e3a50a"
           style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;"
           class="w-layout-blockcontainer blog-sub-info w-container"><img
-            src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/65fc0ea852fd7a3bbd8dc308_Avatar_Small_1_500px_ZoomedOut.jpg"
+            src="/img/65fc0ea852fd7a3bbd8dc308_Avatar_Small_1_500px_ZoomedOut.jpg"
             loading="lazy" alt="Benjamin Krüger" class="blog-author-image">
           <div class="blog-author-name">Benjamin&nbsp;Krüger</div>
           <div class="blog-date">January 03, 2024</div>
         </div><img class="blog-image"
-          src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66d07267547b2c4bbcd80620_3steps.jpg" alt=""
+          src="/img/66d07267547b2c4bbcd80620_3steps.jpg" alt=""
           style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;"
           sizes="(max-width: 479px) 96vw, (max-width: 991px) 97vw, 760px"
           data-w-id="0167e223-aabd-1b06-d582-ec5ca2a92365" loading="lazy"
-          srcset="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66d07267547b2c4bbcd80620_3steps-p-500.jpg 500w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66d07267547b2c4bbcd80620_3steps-p-800.jpg 800w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66d07267547b2c4bbcd80620_3steps-p-1080.jpg 1080w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66d07267547b2c4bbcd80620_3steps-p-1600.jpg 1600w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66d07267547b2c4bbcd80620_3steps-p-2000.jpg 2000w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66d07267547b2c4bbcd80620_3steps.jpg 2160w">
+          srcset="/img/66d07267547b2c4bbcd80620_3steps-p-500.jpg 500w, /img/66d07267547b2c4bbcd80620_3steps-p-800.jpg 800w, /img/66d07267547b2c4bbcd80620_3steps-p-1080.jpg 1080w, /img/66d07267547b2c4bbcd80620_3steps-p-1600.jpg 1600w, /img/66d07267547b2c4bbcd80620_3steps-p-2000.jpg 2000w, /img/66d07267547b2c4bbcd80620_3steps.jpg 2160w">
         <p data-w-id="5c98dc7a-9eca-ac0e-1d14-e9a123badc5d"
           style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;"
           class="blog-list-text">Hackers might already be inside your network, often remaining undetected for an average
@@ -141,12 +141,12 @@
           style="transform: translate3d(0px, 0.7292px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
           class="blog-list-text">For more options, the honeynet.org project provides a comprehensive list: <a
             target="_new" href="https://www.honeynet.org/">honeynet.org</a>.<br></p><img class="blog-image"
-          src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66d056ed68ffe7965e74be7a_Screenshot%202024-08-29%20at%2013.09.02.png"
+          src="/img/66d056ed68ffe7965e74be7a_Screenshot%202024-08-29%20at%2013.09.02.png"
           alt=""
           style="transform: translate3d(0px, 0.7292px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
           sizes="(max-width: 479px) 96vw, (max-width: 991px) 97vw, 760px"
           data-w-id="e0edcde6-e3b6-6df6-f23c-6bac5f399783" loading="lazy"
-          srcset="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66d056ed68ffe7965e74be7a_Screenshot%202024-08-29%20at%2013.09.02-p-500.png 500w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66d056ed68ffe7965e74be7a_Screenshot%202024-08-29%20at%2013.09.02-p-800.png 800w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66d056ed68ffe7965e74be7a_Screenshot%202024-08-29%20at%2013.09.02-p-1080.png 1080w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66d056ed68ffe7965e74be7a_Screenshot%202024-08-29%20at%2013.09.02.png 1242w">
+          srcset="/img/66d056ed68ffe7965e74be7a_Screenshot%202024-08-29%20at%2013.09.02-p-500.png 500w, /img/66d056ed68ffe7965e74be7a_Screenshot%202024-08-29%20at%2013.09.02-p-800.png 800w, /img/66d056ed68ffe7965e74be7a_Screenshot%202024-08-29%20at%2013.09.02-p-1080.png 1080w, /img/66d056ed68ffe7965e74be7a_Screenshot%202024-08-29%20at%2013.09.02.png 1242w">
         <h1 class="blog-sub-headline">Step 2: Placing Honeypots in the Network</h1>
         <p data-w-id="97cf6d82-39f8-b474-f4c4-9f4c73033083"
           style="transform: translate3d(0px, 40px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 0; transform-style: preserve-3d;"
@@ -154,12 +154,12 @@
           detection, strategically place them near high-value assets like data storage systems or databases and in each
           network segment. Ensure they blend in with the environment by using realistic data or mimicking the physical
           devices present in the network.<br></p><img class="blog-image"
-          src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66d056aa40acf288e12064d0_Screenshot%202024-08-29%20at%2013.08.08.png"
+          src="/img/66d056aa40acf288e12064d0_Screenshot%202024-08-29%20at%2013.08.08.png"
           alt=""
           style="transform: translate3d(0px, 1.25px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
           sizes="(max-width: 479px) 96vw, (max-width: 991px) 97vw, 760px"
           data-w-id="3914f380-88d2-7095-4c69-0b9632b29443" loading="lazy"
-          srcset="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66d056aa40acf288e12064d0_Screenshot%202024-08-29%20at%2013.08.08-p-500.png 500w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66d056aa40acf288e12064d0_Screenshot%202024-08-29%20at%2013.08.08-p-800.png 800w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66d056aa40acf288e12064d0_Screenshot%202024-08-29%20at%2013.08.08-p-1080.png 1080w, https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66d056aa40acf288e12064d0_Screenshot%202024-08-29%20at%2013.08.08.png 1127w">
+          srcset="/img/66d056aa40acf288e12064d0_Screenshot%202024-08-29%20at%2013.08.08-p-500.png 500w, /img/66d056aa40acf288e12064d0_Screenshot%202024-08-29%20at%2013.08.08-p-800.png 800w, /img/66d056aa40acf288e12064d0_Screenshot%202024-08-29%20at%2013.08.08-p-1080.png 1080w, /img/66d056aa40acf288e12064d0_Screenshot%202024-08-29%20at%2013.08.08.png 1127w">
         <h1 class="blog-sub-headline">Step 3: Wait for Hackers to Engage</h1>
         <p data-w-id="463905b8-55b8-7d0e-2fe2-5532eb283ba8"
           style="transform: translate3d(0px, 1.25px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
@@ -177,12 +177,12 @@
     <div class="w-layout-blockcontainer container-59 w-container">
       <div data-w-id="40109c1b-261d-9461-5e73-60c8b7f8d1b8" class="w-layout-blockcontainer container-60 w-container"
         style="transform: translate3d(0px, 5.8344px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; opacity: 0.95544; will-change: opacity, transform;">
-        <img src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66b33cbd7e15763fea127462_logo_white.webp"
+        <img src="/img/66b33cbd7e15763fea127462_logo_white.webp"
           width="136" alt="SentryBox Logo" class="image-34">
         <div class="w-layout-blockcontainer w-container">
           <div class="w-layout-blockcontainer container-89 w-container">
             <p class="paragraph-29-copy">Made with </p><img
-              src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66b32db00cc36537de8660c9_Heart.webp"
+              src="/img/66b32db00cc36537de8660c9_Heart.webp"
               loading="lazy" alt="Love" class="image-39">
             <p class="paragraph-29-copy">in&nbsp;Germany </p>
           </div>
@@ -336,14 +336,14 @@
       </script>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=655e51c4f097f75004c023e1"
+  <script src="/js/jquery-3.5.1.min.dc5e7f18c8.js?site=655e51c4f097f75004c023e1"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
-  <script src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/js/webflow.schunk.36b8fb49256177c8.js"
+  <script src="/js/webflow.schunk.36b8fb49256177c8.js"
     type="text/javascript"></script>
-  <script src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/js/webflow.9d7b5763.7c9fec383a4d5d2d.js"
+  <script src="/js/webflow.9d7b5763.7c9fec383a4d5d2d.js"
     type="text/javascript"></script>
-  <script src="https://hubspotonwebflow.com/assets/js/form-124.js" type="text/javascript"
+  <script src="/js/form-124.js" type="text/javascript"
     integrity="sha384-bjyNIOqAKScdeQ3THsDZLGagNN56B4X2Auu9YZIGu+tA/PlggMk4jbWruG/P6zYj"
     crossorigin="anonymous"></script>
 </body>
