--- a/en-us/datenschutz/index.html
+++ b/en-us/datenschutz/index.html
@@ -18,7 +18,7 @@
   <meta content="Datenschutz" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link
-    href="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/css/sentrybox.webflow.shared.069cc7328.min.css"
+    href="/img/css/sentrybox.webflow.shared.069cc7328.min.css"
     rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
@@ -30,9 +30,9 @@
     type="text/javascript">WebFont.load({ google: { families: ["Inconsolata:400,700", "Manrope:200,300,regular,500,600,700,800", "Source Code Pro:regular,600,900"] } });</script>
   <script
     type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-  <link href="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/65c2093da5ccc99dc827362c_favicon-32x32.png"
+  <link href="/img/65c2093da5ccc99dc827362c_favicon-32x32.png"
     rel="shortcut icon" type="image/x-icon">
-  <link href="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/65c209579adc9e9a64f1b5e5_favicon_256.png"
+  <link href="/img/65c209579adc9e9a64f1b5e5_favicon_256.png"
     rel="apple-touch-icon"><!-- Google tag (gtag.js) -->
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-WDW9GQDYPG"></script>
   <script>
@@ -68,7 +68,7 @@
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease"
     role="banner" class="navbar w-nav">
     <div class="container-44 w-container"><a href="/#section-teaser" class="brand-2 w-nav-brand"><img width="150"
-          src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/668ab389d29272fd55e93705_logo_black.svg"
+          src="/img/668ab389d29272fd55e93705_logo_black.svg"
           alt="SentryBox Logo"></a>
       <nav role="navigation" class="nav-menu-3 w-nav-menu"><a data-scroll-time="20" href="/#section-platform"
           class="nav-link-2 w-nav-link" style="max-width: 1220px;">Platform</a><a href="/#section-hardware"
@@ -164,12 +164,12 @@
     <div class="w-layout-blockcontainer container-59 w-container">
       <div data-w-id="40109c1b-261d-9461-5e73-60c8b7f8d1b8" class="w-layout-blockcontainer container-60 w-container"
         style="transform: translate3d(0px, 5.8344px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; opacity: 0.95544; will-change: opacity, transform;">
-        <img src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66b33cbd7e15763fea127462_logo_white.webp"
+        <img src="/img/66b33cbd7e15763fea127462_logo_white.webp"
           width="136" alt="SentryBox Logo" class="image-34">
         <div class="w-layout-blockcontainer w-container">
           <div class="w-layout-blockcontainer container-89 w-container">
             <p class="paragraph-29-copy">Made with </p><img
-              src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66b32db00cc36537de8660c9_Heart.webp"
+              src="/img/66b32db00cc36537de8660c9_Heart.webp"
               loading="lazy" alt="Love" class="image-39">
             <p class="paragraph-29-copy">in&nbsp;Germany </p>
           </div>
@@ -323,14 +323,14 @@
       </script>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=655e51c4f097f75004c023e1"
+  <script src="/js/jquery-3.5.1.min.dc5e7f18c8.js?site=655e51c4f097f75004c023e1"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
-  <script src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/js/webflow.schunk.36b8fb49256177c8.js"
+  <script src="/js/webflow.schunk.36b8fb49256177c8.js"
     type="text/javascript"></script>
-  <script src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/js/webflow.9d7b5763.7c9fec383a4d5d2d.js"
+  <script src="/js/webflow.9d7b5763.7c9fec383a4d5d2d.js"
     type="text/javascript"></script>
-  <script src="https://hubspotonwebflow.com/assets/js/form-124.js" type="text/javascript"
+  <script src="/js/form-124.js" type="text/javascript"
     integrity="sha384-bjyNIOqAKScdeQ3THsDZLGagNN56B4X2Auu9YZIGu+tA/PlggMk4jbWruG/P6zYj"
     crossorigin="anonymous"></script><iframe id="_hjSafeContext_38771277" title="_hjSafeContext" tabindex="-1"
     aria-hidden="true" src="about:blank"
