--- a/en-us/get-quote/index.html
+++ b/en-us/get-quote/index.html
@@ -29,7 +29,7 @@
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link
-    href="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/css/sentrybox.webflow.shared.069cc7328.min.css"
+    href="/img/css/sentrybox.webflow.shared.069cc7328.min.css"
     rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
@@ -41,9 +41,9 @@
     type="text/javascript">WebFont.load({ google: { families: ["Inconsolata:400,700", "Manrope:200,300,regular,500,600,700,800", "Source Code Pro:regular,600,900"] } });</script>
   <script
     type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-  <link href="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/65c2093da5ccc99dc827362c_favicon-32x32.png"
+  <link href="/img/65c2093da5ccc99dc827362c_favicon-32x32.png"
     rel="shortcut icon" type="image/x-icon">
-  <link href="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/65c209579adc9e9a64f1b5e5_favicon_256.png"
+  <link href="/img/65c209579adc9e9a64f1b5e5_favicon_256.png"
     rel="apple-touch-icon"><!-- Google tag (gtag.js) -->
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-WDW9GQDYPG"></script>
   <script>
@@ -92,7 +92,7 @@
             <li data-w-id="b68b049a-cb78-6e9b-0083-a33530a5b0ae"
               style="transform: translate3d(0px, 0.0724px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
               class="features-block-two-copy"><img
-                src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/659facc02e6063204634fa09_check_white_2.png"
+                src="/img/659facc02e6063204634fa09_check_white_2.png"
                 loading="lazy" height="50" alt="Check" width="10" class="features-image-round">
               <p class="paragraph-14-copy"><strong class="bold-text-5-copy number_of_sentryboxes">1</strong><span
                   class="text-span-9"><strong class="bold-text-5-copy"> Wonderful
@@ -102,7 +102,7 @@
             <li data-w-id="b68b049a-cb78-6e9b-0083-a33530a5b0b7"
               style="transform: translate3d(0px, 34.2952px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 0.10861; transform-style: preserve-3d; will-change: transform, opacity;"
               class="features-block-two-copy"><img
-                src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/659facc02e6063204634fa09_check_white_2.png"
+                src="/img/659facc02e6063204634fa09_check_white_2.png"
                 loading="lazy" height="50" alt="Check" width="10" class="features-image-round">
               <p class="paragraph-15-copy"><span class="text-span-10-copy">Unlimited
                   notifications</span><br>Notifications via email, SMS, &amp; webhook for an unlimited number of
@@ -111,7 +111,7 @@
             <li data-w-id="b68b049a-cb78-6e9b-0083-a33530a5b0be"
               style="transform: translate3d(0px, 34.2952px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 0.10861; transform-style: preserve-3d; will-change: transform, opacity;"
               class="features-block-two-copy"><img
-                src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/659facc02e6063204634fa09_check_white_2.png"
+                src="/img/659facc02e6063204634fa09_check_white_2.png"
                 loading="lazy" height="50" alt="Check" width="10" class="features-image-round">
               <p class="paragraph-15-copy"><span class="text-span-10-copy">Includes updates and maintenance</span><br>We
                 provide the worry-free package and keep the SentryBoxes running. If a device fails, we replace it free
@@ -128,7 +128,7 @@
             style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;"
             class="w-layout-blockcontainer container-27-copy w-container">
             <h3 class="heading-24">Choose the number of SentryBoxes you need:</h3><img
-              src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/668b0380b0b6e9af18ee8397_3d_teaser_mobile.svg"
+              src="/img/668b0380b0b6e9af18ee8397_3d_teaser_mobile.svg"
               loading="lazy" alt="SentryBox" class="image-36">
             <form name="Form" action="https://hubspotonwebflow.com/api/forms/b6ee0912-0ccf-4aef-bc87-2c9ce215330e"
               method="POST" enctype="multipart/form-data" data-name="SentryBox Get Quote Form"
@@ -188,7 +188,7 @@
           <li data-w-id="afb87248-7857-0551-b563-a193345a6e85"
             style="transform: translate3d(0px, 0.0724px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
             class="features-block-two-copy"><img
-              src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/659facc02e6063204634fa09_check_white_2.png"
+              src="/img/659facc02e6063204634fa09_check_white_2.png"
               loading="lazy" height="50" alt="Check" width="10" class="features-image-round">
             <p class="paragraph-14-copy"><strong class="bold-text-5-copy number_of_sentryboxes">5</strong><span
                 class="text-span-9"><strong class="bold-text-5-copy"> Wundervolle SentryBoxen</strong></span><br>Frei
@@ -198,7 +198,7 @@
           <li data-w-id="afb87248-7857-0551-b563-a193345a6e8f"
             style="transform: translate3d(0px, 0.1824px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
             class="features-block-two-copy"><img
-              src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/659facc02e6063204634fa09_check_white_2.png"
+              src="/img/659facc02e6063204634fa09_check_white_2.png"
               loading="lazy" height="50" alt="Check" width="10" class="features-image-round">
             <p class="paragraph-15-copy"><span class="text-span-10-copy">Unbegrenzte
                 Benachrichtigungen</span><br>Benachrichtigungen per E-Mail, SMS &amp; Webhook für eine unbegrenzte
@@ -207,7 +207,7 @@
           <li data-w-id="afb87248-7857-0551-b563-a193345a6e96"
             style="transform: translate3d(0px, 0.1824px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d; will-change: transform;"
             class="features-block-two-copy"><img
-              src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/659facc02e6063204634fa09_check_white_2.png"
+              src="/img/659facc02e6063204634fa09_check_white_2.png"
               loading="lazy" height="50" alt="Check" width="10" class="features-image-round">
             <p class="paragraph-15-copy"><span class="text-span-10-copy">Inklusive Updates und Wartung</span><br>Wir
               liefern das rundum sorglos Paket und halten die SentryBoxen am laufen. Wenn ein Gerät ausfällt, ersetzen
@@ -222,7 +222,7 @@
     <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease"
       role="banner" class="navbar w-nav">
       <div class="container-44 w-container"><a href="/#section-teaser" class="brand-2 w-nav-brand"><img width="150"
-            src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/668ab389d29272fd55e93705_logo_black.svg"
+            src="/img/668ab389d29272fd55e93705_logo_black.svg"
             alt="SentryBox Logo"></a>
         <nav role="navigation" class="nav-menu-3 w-nav-menu"><a data-scroll-time="20" href="/#section-platform"
             class="nav-link-2 w-nav-link" style="max-width: 1220px;">Platform</a><a href="/#section-hardware"
@@ -246,12 +246,12 @@
     <div class="w-layout-blockcontainer container-59 w-container">
       <div data-w-id="40109c1b-261d-9461-5e73-60c8b7f8d1b8" class="w-layout-blockcontainer container-60 w-container"
         style="transform: translate3d(0px, 5.4012px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; opacity: 0.97063; will-change: opacity, transform;">
-        <img src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66b33cbd7e15763fea127462_logo_white.webp"
+        <img src="/img/66b33cbd7e15763fea127462_logo_white.webp"
           width="136" alt="SentryBox Logo" class="image-34">
         <div class="w-layout-blockcontainer w-container">
           <div class="w-layout-blockcontainer container-89 w-container">
             <p class="paragraph-29-copy">Made with </p><img
-              src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/66b32db00cc36537de8660c9_Heart.webp"
+              src="/img/66b32db00cc36537de8660c9_Heart.webp"
               loading="lazy" alt="Love" class="image-39">
             <p class="paragraph-29-copy">in&nbsp;Germany </p>
           </div>
@@ -405,14 +405,14 @@
       </script>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=655e51c4f097f75004c023e1"
+  <script src="/js/jquery-3.5.1.min.dc5e7f18c8.js?site=655e51c4f097f75004c023e1"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
-  <script src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/js/webflow.schunk.36b8fb49256177c8.js"
+  <script src="/js/webflow.schunk.36b8fb49256177c8.js"
     type="text/javascript"></script>
-  <script src="https://cdn.prod.website-files.com/655e51c4f097f75004c023e1/js/webflow.9d7b5763.7c9fec383a4d5d2d.js"
+  <script src="/js/webflow.9d7b5763.7c9fec383a4d5d2d.js"
     type="text/javascript"></script>
-  <script src="https://hubspotonwebflow.com/assets/js/form-124.js" type="text/javascript"
+  <script src="/js/form-124.js" type="text/javascript"
     integrity="sha384-bjyNIOqAKScdeQ3THsDZLGagNN56B4X2Auu9YZIGu+tA/PlggMk4jbWruG/P6zYj"
     crossorigin="anonymous"></script><iframe id="_hjSafeContext_67981144" title="_hjSafeContext" tabindex="-1"
     aria-hidden="true" src="about:blank"
